change return body

--- a/conf.d/whatismyip.conf
+++ b/conf.d/whatismyip.conf
@@ -8,6 +8,6 @@ server {
 
   location / {
     default_type text/plain;
-    return 200 $remote_addr\n;
+    return 200 $http_x_forwarded_for\n;
   }
 }
